[package]
name = "torch-web"
version = "0.2.4"
edition = "2021"
authors = ["Dragos Ionut <dragosionut@keemail.me>"]
description = "Fast, secure web framework for Rust with production-ready features out of the box"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Enigmatikk/torch"
homepage = "https://github.com/Enigmatikk/torch"
documentation = "https://docs.rs/torch-web"
readme = "README.md"
keywords = ["web", "framework", "http", "async", "performance"]
categories = ["web-programming::http-server", "asynchronous", "network-programming"]
exclude = ["target/", ".git/", ".github/", "*.log"]
rust-version = "1.75"

[dependencies]
# Core async runtime and HTTP
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http = "1.0"
http-body = "1.0"
http-body-util = "0.1"

# Utilities
futures = "0.3"
pin-project-lite = "0.2"
tower = { version = "0.4", features = ["util"] }
tower-service = "0.3"
urlencoding = "2.1"

# UUID support for path parameters
uuid = { version = "1.0", features = ["v4", "serde"], optional = true }

# Serialization (optional, for JSON support)
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# Production features (optional)
chrono = { version = "0.4", features = ["serde"], optional = true }
toml = { version = "0.8", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
metrics = { version = "0.21", optional = true }
dashmap = { version = "5.5", optional = true }
sha2 = { version = "0.10", optional = true }
hmac = { version = "0.12", optional = true }
base64 = { version = "0.21", optional = true }

# WebSocket support (optional)
tokio-tungstenite = { version = "0.20", optional = true }
futures-util = { version = "0.3", optional = true }
sha1 = { version = "0.10", optional = true }

# Database support (optional)
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"], optional = true }

# Cache support (optional)
redis = { version = "0.26", optional = true }

# Ember template engine dependencies (optional)
regex = { version = "1.10", optional = true }
once_cell = { version = "1.19", optional = true }
walkdir = { version = "2.4", optional = true }

[features]
default = ["json"]
json = ["serde", "serde_json"]
production = [
    "json",
    "chrono",
    "toml",
    "uuid",
    "tracing",
    "tracing-subscriber",
    "metrics",
    "dashmap",
    "sha2",
    "hmac",
    "base64"
]
security = ["sha2", "hmac", "base64", "uuid"]
config = ["toml", "serde"]
monitoring = ["tracing", "tracing-subscriber", "metrics", "chrono"]
websocket = ["tokio-tungstenite", "futures-util", "sha1", "base64", "uuid"]
database = ["sqlx", "chrono", "uuid"]
cache = ["redis"]
api = ["json", "uuid"]
templates = ["regex", "once_cell", "walkdir", "serde", "serde_json"]

[dev-dependencies]
tokio-test = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"

[[example]]
name = "extractors_demo"
path = "examples/extractors_demo.rs"

[[example]]
name = "state_demo"
path = "examples/state_demo.rs"

[[example]]
name = "enhanced_extractors"
path = "examples/enhanced_extractors.rs"

[[example]]
name = "ember_demo"
path = "examples/ember_demo.rs"
required-features = ["templates"]

[[example]]
name = "ember_test"
path = "examples/ember_test.rs"
required-features = ["templates"]

[[example]]
name = "registration_wizard"
path = "examples/registration_wizard.rs"
required-features = ["templates", "json"]


